http://www.grame.fr
research@grame.fr
====================================================
Copyright GRAME (c) 2009,2010,2011
----------------------------------------------------
INScore originates from the Interlude project.
It has been supported by the ANR (ANR-08-CORD-010)
====================================================

----------------------------------------------------
Version 0.78
- new transformations messages (shear and rotate)
- new 'rename' message to change objects name (and thus OSC address)
- accepts float values for bool parameters 
- automatic numbering of exports when destination file is not completely specified 
  (no name, no extension)
- quantification introduced to $date variable
- reset message addressed to a scene clears the scene rootPath

----------------------------------------------------
Version 0.77
- get guido-version and musicxml-version messages supported by the application (/ITL address)
- 'save' message bug correction - introduced with version 0.70:
   only partial state of objects was saved
- 'rootPath' message introduced at scene level
- scene name translation strategy change: only the explicit 'scene' name is 
  translated by the scene load message handler into the current scene name, 
  other names are left unchanged.
- bitmap copy adjustment in sync stretched mode is now only made for images

----------------------------------------------------
Version 0.76
- new 'require' message supported by the /ITL node (see documentation)
- new event named 'newElement' supported at scene level
- new 'name' and 'address' variables
- new system map computation making use of the new slices map provided by the
  guidolib version 1.42
- INScore API: the newMessage methods set now the message src IP to localhost
  With the previous version and the lack of src IP, replies to queries or error 
  messages could be sent to undefined addresses (and mostly lost).
- bug corrected with ellipse and rect : integer graphic size computation changed 